--- a/action.yml
+++ b/action.yml
@@ -22,9 +22,9 @@ inputs:
     required: true
 
   wait:
-    description: 'Wait for the job to complete'
-    default: 'false'
-    required: true
+    description: 'Wait for the job to be in this state'
+    default: ''
+    required: false
 
   branch_name:
     description: 'Name of the branch that is being deployed'
